--- a/app/assets/templates/categories/index.jst.ejs
+++ b/app/assets/templates/categories/index.jst.ejs
@@ -1,10 +1,12 @@
 <h3>Categories</h3>
 <ul>
   <% categories.each(function (category) { %>
-  <li>
-  <a href="#/categories/<%= category.id %>"><%= category.escape("title") %></a>
-  <a href="#/categories/<%= category.id %>/edit">Edit</a>
-  </li>
+    <li>
+    <a href="#/categories/<%= category.id %>"><%= category.escape("title") %></a>
+    <a href="#/categories/<%= category.id %>/edit">Edit</a>
+    <% console.log(category) %>
+    </li>
   <% }); %>
+
 </ul>
 <a href="#/categories/new">New Category</a>
