--- a/app/assets/templates/categories/index.jst.ejs
+++ b/app/assets/templates/categories/index.jst.ejs
@@ -1,11 +1,13 @@
-<h3>Categories</h3>
-<ul>
+<h1>Categories</h1>
+<ul class="categories-list">
   <% categories.each(function (category) { %>
-    <li>
-    <a href="#/categories/<%= category.id %>"><%= category.escape("title") %></a>
-    <a href="#/categories/<%= category.id %>/edit">Edit</a>
+    <li class="category-item">
+    <a href="#/categories/<%= category.escape("title").toLowerCase() %>"><%= category.escape("title") %></a>
     </li>
   <% }); %>
 
 </ul>
-<a href="#/categories/new">New Category</a>
+<p>
+  <a href="#/categories/new">Add Category</a><br>
+  <a href="#/feeds/new">Add Feed</a>
+</p>
