--- a/app/assets/templates/categories/index.jst.ejs
+++ b/app/assets/templates/categories/index.jst.ejs
@@ -1,4 +1,5 @@
 <h1>Categories</h1>
+
 <ul class="categories-list">
   <% categories.each(function (category) { %>
     <li class="category-item">
@@ -7,6 +8,11 @@
   <% }); %>
 
 </ul>
+<p>
+  <a href="#/countries">
+    <h2>Countries</h2>
+  </a>
+</p>
 <p>
   <a href="#/categories/new">Add Category</a><br>
   <a href="#/feeds/new">Add Feed</a>
