--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,26 @@
-<% if signed_in? %>
-  Welcome, <%= current_user.email %>
-  <%= button_to "Sign out", session_url, method: :delete %>
-<% else %>
-  <%= link_to "Log in", new_session_url %>
-  <%= link_to "Sign up", new_user_url %>
-<% end %>
+<nav class="topnav group">
+  <figure class="topnav-brand">
+    <a class="topnav-brand-logo" href="/#">b</a>
+  </figure>
+  <ul class="topnav-menu-right">
+  <% if signed_in? %>
+    <li>
+      <a href="/#categories/new" style="padding: 0;">
+        <button class='navbar-btn btn new-category hvr-radial-out'>
+          +
+        </button>
+      </a>
+    </li>
+    <li>
+      <%= button_to "Sign out", session_url, method: :delete, class: "navbar-btn btn hvr-radial-out" %>
+    </li>
+
+  <% else %>
+    <li><%= link_to "Log in", new_session_url %></li>
+    <li><%= link_to "Sign up", new_user_url %></li>
+  <% end %>
+  </ul>
+</nav>
 
 <% if flash[:errors] %>
   <%= flash[:errors].join("<br>").html_safe %>
