--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -65,7 +65,7 @@ ul {
 
 .navbar-btn {
   padding: 10px;
-  margin: 0 5px;
+  margin: 3px 5px;
 }
 
 .new-category {
@@ -84,6 +84,7 @@ ul {
   position: fixed;
   display: block;
   width: 100%;
+  height: 70px;
   background: white;
   border-bottom: 2px solid black;
   opacity: 1;
@@ -100,22 +101,44 @@ ul {
 .topnav-brand {
   display: block;
   float: left;
-  margin: 0 50px;
+  margin: 0 60px;
+  // border: 1px solid #999;
+  // width: 50px;
+  // height: 50px;
+  // border-radius: 25px;
+}
 
+.topnav-brand-logo {
+  font-family: "Calisto MT", "Bookman Old Style", Bookman, "Goudy Old Style", Garamond, "Hoefler Text", "Bitstream Charter", Georgia, serif;
   font-size: 48px;
   font-weight: bold;
+}
+
+.topnav-menu-left {
+  float: left;
+  display: block;
+  list-style: none;
+  margin-top: 15px;
 }
 
 .topnav-menu-right {
   float: right;
   display: block;
   list-style: none;
+  margin-top: 10px;
   margin-right: 30px;
 }
 
-.topnav-menu-right li {
+.topnav-menu-right li, .topnav-menu-left li {
   float: left;
   display: block;
+}
+
+.topnav-menu-left li {
+  font-family: 'roboto';
+  font-weight: 300;
+  font-size: 24px;
+  margin: 6px 30px;
 }
 
 #main {
@@ -126,13 +149,30 @@ ul {
   text-align: center;
 }
 
-.page-title {
-  font-size: 2rem;
+.category-title, .country-title {
+  font: 28px/35px "ProximaNova-Black", "Arial", sans-serif;
+  text-transform: uppercase;
   letter-spacing: 2px;
-  margin: 50px auto;
-  width: 200px;
+  margin: 50px 0;
+  width: 300px;
   padding: 10px;
-  border-bottom: 18px solid black;
+  border-bottom: 4px solid black;
+}
+
+@font-face {
+  font-family: 'Tagesschrift';
+  src: url('tagesschrift.ttf');
+}
+
+.category-posts, .country-posts {
+  list-style: none;
+}
+
+.post-item {
+  list-style: none;
+  float: left;
+  display: block;
+  margin: 10px 40px;
 }
 
 .board-item {
