--- a/app/assets/templates/categories/index.jst.ejs
+++ b/app/assets/templates/categories/index.jst.ejs
@@ -9,9 +9,37 @@
 
     <ul class="category-posts">
       <% category.posts().each(function (post) { %>
+
         <li class="post-item">
-          <img src="<%= post.escape('thumb_img') %>" alt="" />
+          <h3 class="country-name">
+            <a href="#/countries/<%= post.escape('country').toLowerCase() %> ">
+              <%= post.escape('country') %>
+            </a>
+          </h3>
+
+          <section class="post-img">
+            <a href="#/feeds/<%= post.escape('author').toLowerCase() %>/<%= post.id %>">
+              <img src="<%= post.escape('thumb_img') %>" alt="" />
+            </a>
+            <section class="post-author">
+              <a href="#/feeds/<%= post.escape('author').toLowerCase() %>">
+                <%= post.escape('author') %>
+              </a>
+            </section>
+          </section>
+
+          <section class="counters">
+            <div class="likes-count">
+              <i class="icon-heart-empty"></i>
+              <span class="likes-count-num">😘 9</span>
+            </div>
+            <div class="comments-count">
+              <span class="icon-comment"></span>
+              <span class="comments-count-num">😉 0</span>
+            </div>
+          </section>
         </li>
+
       <% }) %>
     </ul>
     </li>
