--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,9 @@
     <li>
       <a href="#/countries">Countries</a>
     </li>
+    <li>
+      <a href="#/liked">Liked</a>
+    </li>
   </ul>
   <ul class="topnav-menu-right">
   <% if signed_in? %>
