--- a/app/assets/templates/countries/index.jst.ejs
+++ b/app/assets/templates/countries/index.jst.ejs
@@ -1,6 +1,6 @@
 <ul class="countries-list">
   <% countries.each(function (country) { %>
-    <li class="country-item">
+    <li class="country-item group">
 
     <h2 class="country-title">
       <a href="#/countries/<%= country.id %>">
@@ -10,10 +10,19 @@
     </h2>
 
     <ul class="country-posts">
-      <% country.posts().each(function (post) { %>
+      <% country.posts().slice(0,6).forEach(function (post) { %>
+
         <li class="post-item">
-          <img src="<%= post.escape('thumb_img') %>" alt="" />
+          <h3 class="category-name">
+            <a href="#/categories/<%= post.escape('category').toLowerCase() %> ">
+              <%= post.escape('category') %>
+            </a>
+          </h3>
+
+          <%= JST["posts/_post"]({ post: post }) %>
+
         </li>
+
       <% }) %>
     </ul>
     </li>
