--- a/app/assets/templates/posts/_post.jst.ejs
+++ b/app/assets/templates/posts/_post.jst.ejs
@@ -11,8 +11,8 @@
 
 <section class="counters">
   <div class="likes-count">
-    <i class="icon-heart-empty"></i>
-    <span class="likes-count-num">😘 9</span>
+      <i class="icon-heart-empty"></i>
+      <span class="likes-count-num">😘 <%= post.escape('like_count') %></span>
   </div>
   <div class="comments-count">
     <span class="icon-comment"></span>
