add like BB collection & model & view

--- a/app/assets/templates/countries/index.jst.ejs
+++ b/app/assets/templates/countries/index.jst.ejs
@@ -19,7 +19,7 @@
             </a>
           </h3>
 
-          <%= JST["posts/_post"]({ post: post }) %>
+          <%= post.render().$el %>
 
         </li>
 
