--- a/app/assets/templates/categories/index.jst.ejs
+++ b/app/assets/templates/categories/index.jst.ejs
@@ -17,7 +17,7 @@
               </a>
             </h3>
 
-            <%= JST["posts/_post"]({ post: post }) %>
+            <%= post.render().$el %>
 
           </li>
 
