add post partial for countries

--- a/app/assets/templates/categories/index.jst.ejs
+++ b/app/assets/templates/categories/index.jst.ejs
@@ -17,7 +17,7 @@
               </a>
             </h3>
 
-            <%= post.render().$el %>
+            <%= JST["posts/_thumb"]({ post: post }) %>
 
           </li>
 
