--- a/app/assets/templates/categories/show.jst.ejs
+++ b/app/assets/templates/categories/show.jst.ejs
@@ -12,8 +12,7 @@
           <%= post.escape('country') %>
         </a>
       </h3>
-
-      <%= post.render().$el %>
+      <%= JST["posts/_thumb"]({ post: post }) %>
 
     </li>
 
