--- a/app/assets/templates/countries/index.jst.ejs
+++ b/app/assets/templates/countries/index.jst.ejs
@@ -19,7 +19,7 @@
             </a>
           </h3>
 
-          <%= post.render().$el %>
+          <%= JST["posts/_thumb"]({ post: post }) %>
 
         </li>
 
