--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,7 @@
    color: inherit;
    box-sizing: inherit;
    text-decoration: inherit;
+   -webkit-font-smoothing: antialiased;
  }
 
 .feed-list {
@@ -194,6 +195,15 @@ ul {
 .post-item:hover {
   border: 1px solid #ccc;
   cursor: pointer;
+
+  .post-author {
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+  }
+  .counters {
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+  }
 }
 
 .navbar-btn:hover {
@@ -229,12 +239,26 @@ ul {
   background: #eee;
   color: #000;
   letter-spacing: 1px;
-  margin-top: -25px;
+  margin-top: -29px;
+  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.66, 0, 0.07, 1);
+  transition: transform 0.3s cubic-bezier(0.66, 0, 0.07, 1);
+  -webkit-transform: rotateX(-90deg);
+  transform: rotateX(-90deg);
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform-origin: 0 0;
 }
 
 .counters {
   padding-top: 20px;
   font-size: 14px;
+  -webkit-transition: -webkit-transform 0.3s cubic-bezier(0.66, 0, 0.07, 1);
+  transition: transform 0.3s cubic-bezier(0.66, 0, 0.07, 1);
+  -webkit-transform: rotateX(-90deg);
+  transform: rotateX(-90deg);
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform-origin: 0 0;
 }
 
 .likes-count {
@@ -253,6 +277,15 @@ ul {
 
 .comments-count {
   margin-left: 8px;
+}
+
+.likes-count-num {
+  margin-left: 3px;
+}
+
+.icon-comment-alt {
+  position: relative;
+  top: -1px;
 }
 
 /* Hover Effects */
@@ -348,6 +381,3 @@ ul {
 
 @import url(http://fonts.googleapis.com/css?family=Playfair+Display:400,700);
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700,300);
-
-@import "font-awesome-sprockets";
-@import "font-awesome";
