--- a/app/assets/templates/posts/_thumbCore.jst.ejs
+++ b/app/assets/templates/posts/_thumbCore.jst.ejs
@@ -1,10 +1,12 @@
-<a href="#/feeds/<%= post.escape('author').toLowerCase() %>/<%= post.id %>">
-  <img src="<%= post.escape('thumb_img') %>" alt="" />
-</a>
-<section class="post-author">
-  <a href="#/feeds/<%= post.escape('author').toLowerCase() %>">
-    <%= post.escape('author') %>
+<section class="img-container">
+  <a href="#/feeds/<%= post.escape('author').toLowerCase() %>/<%= post.id %>">
+    <img src="<%= post.escape('thumb_img') %>" alt="" />
   </a>
+  <section class="post-author">
+    <a href="#/feeds/<%= post.escape('author').toLowerCase() %>">
+      <%= post.escape('author') %>
+    </a>
+  </section>
 </section>
 
 <section class="counters group">
