post modal view

--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -1,4 +1,1 @@
-Post Show View
-<h1><%= post.escape("title") %></h1>
-<pre><%= post.escape("body") %></pre>
-<a href="#/">Index</a>
+<img src="<%= post.escape('full_img') %>">
