--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,12 @@
 <body>
   <%= render partial: "layouts/header" %>
   <%= yield %>
+  <div class="modal">
+    <form class="modal-form">
+    </form>
+    <div class="modal-screen js-modal-close">
+      hi
+    </div>
+  </div>
 </body>
 </html>
