--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,6 +46,7 @@ a {
 
 a:hover {
   color: #999;
+  transition: all 0.3s ease;
 }
 
 img {
@@ -77,6 +78,12 @@ ul {
 .navbar-btn {
   padding: 10px;
   margin: 3px 5px;
+}
+
+.navbar-btn:hover {
+  background: black;
+  cursor: pointer;
+  border-color: #000;
 }
 
 .new-category {
@@ -196,7 +203,8 @@ ul {
   transition-property: border;
   -webkit-transition-duration: 0.5s;
   transition-duration: 0.5s;
-
+  z-index: 0;
+  
   img {
     transition: all 0.3s ease;
   }
@@ -223,12 +231,6 @@ ul {
     -webkit-transform: rotateX(0);
     transform: rotateX(0);
   }
-}
-
-.navbar-btn:hover {
-  background: black;
-  cursor: pointer;
-  border-color: #000;
 }
 
 .country-name, .category-name {
@@ -282,6 +284,8 @@ ul {
 }
 
 .likes-count {
+  z-index: 1;
+
   i {
     float: left;
   }
