--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,21 +1,4 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_self
- *= require_tree .
- *= require jquery-ui
- */
-
- html, body, header, main, div, section, figure, p, ul, li, span {
+html, body, header, main, div, section, figure, p, ul, li, span {
    margin: 0;
    padding: 0;
    font: inherit;
@@ -204,7 +187,7 @@ ul {
   -webkit-transition-duration: 0.5s;
   transition-duration: 0.5s;
   z-index: 0;
-  
+
   img {
     transition: all 0.3s ease;
   }
@@ -322,19 +305,22 @@ ul {
   display: block;
 }
 
+
 .modal-form {
-  position: absolute;
-  top: 100px;
+  position: fixed;
   margin: 0 auto;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   padding: 20px;
   background: #fff;
   z-index: 3;
-  border-radius: 5px;
   display: block;
+  width: 700px;
 }
 
 .modal-screen {
-  position: fixed;
+  position: absolute;
   background: rgba(0, 0, 0, 0.7);
   top: 0;
   bottom: 0;
