--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,7 @@
   <div class="modal">
     <form class="modal-form">
     </form>
-    <div class="modal-screen js-modal-close">
-      hi
+    <div class="modal-close">
     </div>
   </div>
 </body>
