--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -191,10 +191,7 @@ ul {
   padding: 30px 40px 20px 40px;
   border: 1px solid #fff;
   color: #999;
-  -webkit-transition-property: border;
-  transition-property: border;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
+  transition: all 0.5s ease;
   z-index: 0;
 
   img {
@@ -215,7 +212,7 @@ ul {
   }
 
   img {
-    opacity: 0.3;
+    opacity: 0.4;
     filter: alpha(opacity=40);
   }
 
@@ -335,7 +332,7 @@ ul {
   filter: blur(5px) grayscale(50%);
 }
 
-#main, .modal {
+#main, .modal, .topnav {
   transition: all 0.4s ease; /* prefix me */
 }
 
@@ -343,6 +340,7 @@ ul {
   position: fixed;
   margin: 0 auto;
   top: 0;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   padding: 20px;
