--- a/app/assets/templates/countries/show.jst.ejs
+++ b/app/assets/templates/countries/show.jst.ejs
@@ -1,8 +1,7 @@
 <h2 class="country-title group">
-  <a href="#/countries/<%= country.id %>"><%= country.escape("name") %></a>
-  <!-- escape("title").toLowerCase() -->
+  <a href="#/countries/<%= country.escape("name").toLowerCase() %>"><%= country.escape("name") %></a>
 </h2>
 
-<ul class="country-posts">
+<ul class="country-posts group">
 
 </ul>
