--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -152,15 +152,16 @@ ul {
 }
 
 .categories-list, .countries-list {
-  top: 100px;
-  position: relative;
-  display: block;
-  margin: 0 80px;
-  text-align: center;
+
 }
 
 .category-item, .country-item {
-  margin-top: 30px;
+  top: 100px;
+  position: relative;
+  display: block;
+  margin: 0 20px;
+  text-align: center;
+  padding-top: 20px;
 }
 
 .category-title, .country-title {
@@ -169,9 +170,8 @@ ul {
   letter-spacing: 2px;
   margin: 10px 0;
   padding: 30px 40px;
-  width: 300px;
   display: block;
-  text-align: left;
+  text-align: center;
 }
 
 // @font-face {
@@ -182,17 +182,18 @@ ul {
 .category-posts, .country-posts {
   list-style: none;
   margin: 0 auto;
+  text-align: center;
 }
 
 .post-item {
   list-style: none;
-  float: left;
-  display: block;
+  display:inline-block;
   padding: 30px 40px 20px 40px;
   border: 1px solid #fff;
   color: #999;
   transition: all 0.5s ease;
   z-index: 0;
+  margin: 0 1.5%;
 
   img {
     transition: all 0.3s ease;
@@ -253,7 +254,6 @@ ul {
   padding: 5px 5px;
   width: 310px;
   text-align: left;
-  background-color: rgba(255,255,255,0.5);
   color: #000;
   margin-top: 0;
   letter-spacing: 1px;
@@ -326,10 +326,10 @@ ul {
 
 .modal-is-open #main, .modal-is-open .topnav {
   -webkit-filter: blur(5px) grayscale(50%) brightness(50%);
-  -moz-filter: blur(5px) grayscale(50%);
-  -o-filter: blur(5px) grayscale(50%);
-  -ms-filter: blur(5px) grayscale(50%);
-  filter: blur(5px) grayscale(50%);
+  -moz-filter: blur(5px) grayscale(50%) brightness(50%);
+  -o-filter: blur(5px) grayscale(50%) brightness(50%);
+  -ms-filter: blur(5px) grayscale(50%) brightness(50%);
+  filter: blur(5px) grayscale(50%) brightness(50%);
 }
 
 #main, .modal, .topnav {
@@ -348,6 +348,7 @@ ul {
   z-index: 3;
   display: block;
   width: 700px;
+  overflow: scroll;
 }
 
 .modal-close {
