--- a/app/assets/templates/categories/show.jst.ejs
+++ b/app/assets/templates/categories/show.jst.ejs
@@ -2,6 +2,6 @@
   <a href="#/categories/<%= category.escape("title").toLowerCase() %>"><%= category.escape("title") %></a>
 </h2>
 
-<ul class="category-posts">
+<ul class="category-posts group">
 
 </ul>
