--- a/app/assets/templates/posts/_thumbCore.jst.ejs
+++ b/app/assets/templates/posts/_thumbCore.jst.ejs
@@ -1,5 +1,5 @@
 <section class="img-container">
-  <img src="<%= post.escape('thumb_img') %>" alt="" />
+  <img src="<%= post.escape('full_img') %>" alt="" />
   <section class="post-author">
     <a href="#/feeds/<%= post.escape('author').toLowerCase() %>">
       <%= post.escape('author') %>
