--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -1,22 +1,29 @@
-<div id="google_translate_element"></div><script type="text/javascript">
-function googleTranslateElementInit() {
-  new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT, multilanguagePage: true}, 'google_translate_element');
-}
-</script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
-<h2 class="post-category">
-  <%= post.escape('category') %>
-</h2>
-<h3 class="post-country">
-  <%= post.escape('country') %>
-</h3>
-<img src="<%= post.escape('full_img') %>">
+<section class="post-img-container">
+  <span class="post-country">
+    <%= post.escape('country') %>
+  </span>
+  <span class="post-category-big">
+    <%= post.escape('category') %>
+  </span>
+  <span class="post-author">
+    <%= post.escape('author') %>
+  </span>
+  <img src="<%= post.escape('full_img') %>">
 
-<%= post.escape('author') %>
-<div class="likes-count">
-  <i class="icon-heart-empty"></i>
-  <span class="likes-count-num"><%= post.escape('like_count') %></span>
-</div>
-<div class="post-caption">
-  <%= post.escape('caption') %>
+  <div class="likes-count">
+    <i class="icon-heart-empty"></i>
+    <span class="likes-count-num"><%= post.escape('like_count') %></span>
+  </div>
+</section>
+
+<div class="post-content">
+  <div class="post-caption">
+    <div id="google_translate_element"></div><script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.FloatPosition.TOP_LEFT, multilanguagePage: true}, 'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    <%= post.escape('caption') %>
+  </div>
 </div>
