--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -1,12 +1,12 @@
 
-<section class="post-img-container">
-  <span class="post-country">
+<section class="modal-img-container">
+  <span class="modal-post-country">
     <%= post.escape('country') %>
   </span>
-  <span class="post-category-big">
+  <span class="modal-post-category-main">
     <%= post.escape('category') %>
   </span>
-  <span class="post-author">
+  <span class="modal-post-author">
     <%= post.escape('author') %>
   </span>
   <img src="<%= post.escape('full_img') %>">
