--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -395,6 +395,13 @@ ul {
   }
 }
 
+.goog-te-banner-frame.skiptranslate {
+    display: none !important;
+    }
+body {
+    top: 0px !important;
+    }
+
 /* Hover Effects */
 
 .hvr-rectangle-out {
