--- a/app/assets/templates/categories/show.jst.ejs
+++ b/app/assets/templates/categories/show.jst.ejs
@@ -1,5 +1,7 @@
 <h2 class="category-title">
-  <a href="#/categories/<%= category.escape("title").toLowerCase() %>"><%= category.escape("title") %></a>
+  <strong>
+    <a href="#/categories/<%= category.escape('title').toLowerCase() %>"><%= category.escape("title") %></a>
+  </strong>
 </h2>
 
 <ul class="category-posts group">
