--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,8 +28,8 @@
 
   <% else %>
     <li>
-      <a href="/session/new" style="padding: 0;">
-        <button class='navbar-btn btn hvr-radial-out'>
+      <a href="#">
+        <button class='navbar-btn btn hvr-radial-out login-btn'>
           Log in
         </button>
       </a>
